<resources>
    <string name="app_name">PSR Quiz App</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="hello_student">Hello Student!</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="pernilaian_sekolah_rendah_psr_quiz_app">PERNILAIAN SEKOLAH RENDAH (PSR) QUIZ APP</string>
    <string name="get_started">Get Started</string>
    <string name="start">Start</string>
    <string name="Start">Start</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="Register">Register</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="material">Material</string>
    <string name="quiz">Quiz</string>
    <string name="performance">Performance</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="Material">Material</string>
    <string name="Quiz">Quiz</string>
    <string name="Performance">Performance</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="bahasa_melayu">Bahasa Melayu</string>
    <string name="mathematics">Mathematics</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="lesson2">Lesson2</string>
    <string name="lesson3">Lesson3</string>
    <string name="lesson4">Lesson4</string>
    <string name="lesson5">Lesson5</string>
    <string name="lesson6">Lesson6</string>
    <string name="quiz_6">Quiz 6</string>
    <string name="quiz_5">Quiz 5</string>
    <string name="quiz_1">Quiz 1</string>
    <string name="quiz_2">Quiz 2</string>
    <string name="quiz_3">Quiz 3</string>
    <string name="quiz_4">Quiz 4</string>
    <string name="lesson_6">Lesson 6</string>
    <string name="lesson_2">Lesson 2</string>
    <string name="lesson_3">Lesson 3</string>
    <string name="lesson_4">Lesson 4</string>
    <string name="lesson_5">Lesson 5</string>
    <string name="Lesson_2">Lesson 2</string>
    <string name="Lesson_3">Lesson 3</string>
    <string name="Lesson_4">Lesson 4</string>
    <string name="Lesson_5">Lesson 5</string>
    <string name="Lesson_6">Lesson 6</string>
    <string name="question_5_10">Question 5/10</string>
    <string name="_04_32_00">04:32:00</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="all_time">All Time</string>
    <string name="_1_10">1/10</string>
    <string name="_23_02_mins">23 : 02 mins</string>
    <string name="next">Next</string>
    <string name="show_password">Show Password</string>
    <string name="Weekly">Weekly</string>
    <string name="Monthly">Monthly</string>
    <string name="All_time">All Time</string>
    <string name="_1">1</string>
    <string name="title">Title</string>
    <string name="_00000">00000</string>
    <string name="_0">0</string>
    <string name="_0000">0000</string>
    <string name="answer">answer</string>
    <string name="Answer">Answer</string>
    <string name="question_1_10">Question 1/10</string>
    <string name="profile">Profile</string>
    <string name="Profile">Profile</string>
    <string name="arahan">Arahan</string>
    <string name="Username">Username</string>
    <string name="score">Score</string>
    <string name="logout">Logout</string>
    <string name="save_profile">Save Profile</string>
    <string name="grade">Grade</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="score_0">Score: 0</string>
    <string name="back_to_quiz">Back to Quiz</string>
    <string name="Score_0">Score: 0</string>
    <string name="Back_to_quiz">Back to Quiz</string>
    <string name="question_1_of_5">Question 1 of 5</string>
    <string name="_01_00">01:00</string>
    <string name="SCore_0">Score: 0</string>
    <string name="submit">Submit</string>
    <string name="option_4">Option 4</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="question">Question?</string>
    <string name="__01_00">01:00</string>
    <string name="Question_1_of_5">Question 1 of 5</string>
    <string name="Question">Question?</string>
    <string name="Option_1">Option 1</string>
    <string name="Option_2">Option 2</string>
    <string name="Option_3">Option 3</string>
    <string name="Option_4">Option 4</string>
    <string name="Submit">Submit</string>
    <string name="_score_0">Score: 0</string>
    <string name="Arahan">Arahan</string>
    <string name="_1_jawab_semua_soalan_n2_ujian_ini_ada_mengandungi_jenis_soalan_aneka_pilihan_n3_kerjakan_dengan_cepat_dan_berhati_hati_n4_harus_menyiapkan_semua_soalan_sebelum_masa_habis">1. JAWAB SEMUA SOALAN\n2. UJIAN INI ADA MENGANDUNGI JENIS SOALAN ANEKA PILIHAN.\n3. KERJAKAN DENGAN CEPAT DAN BERHATI - HATI\n4. HARUS MENYIAPKAN SEMUA SOALAN SEBELUM MASA HABIS</string>
    <string name="_3_minutes">3 Minutes</string>
    <string name="_10_questions">10 Questions</string>
    <string name="aRahan">Arahan</string>
    <string name="_1_Jawab_semua_soalan_n2_ujian_ini_ada_mengandungi_jenis_soalan_aneka_pilihan_n3_kerjakan_dengan_cepat_dan_berhati_hati_n4_harus_menyiapkan_semua_soalan_sebelum_masa_habis">1. JAWAB SEMUA SOALAN\n2. UJIAN INI ADA MENGANDUNGI JENIS SOALAN ANEKA PILIHAN.\n3. KERJAKAN DENGAN CEPAT DAN BERHATI - HATI\n4. HARUS MENYIAPKAN SEMUA SOALAN SEBELUM MASA HABIS</string>
    <string name="_3_Minutes">3 Minutes</string>
    <string name="_10_Questions">10 Questions</string>
    <string name="arAhan">Arahan</string>
    <string name="_1_jAwab_semua_soalan_n2_ujian_ini_ada_mengandungi_jenis_soalan_aneka_pilihan_n3_kerjakan_dengan_cepat_dan_berhati_hati_n4_harus_menyiapkan_semua_soalan_sebelum_masa_habis">1. JAWAB SEMUA SOALAN\n2. UJIAN INI ADA MENGANDUNGI JENIS SOALAN ANEKA PILIHAN.\n3. KERJAKAN DENGAN CEPAT DAN BERHATI - HATI\n4. HARUS MENYIAPKAN SEMUA SOALAN SEBELUM MASA HABIS</string>
    <string name="_3_mInutes">3 Minutes</string>
    <string name="_10_qUestions">10 Questions</string>
    <string name="araHan">Arahan</string>
    <string name="_1_jawab_semua_soalan_n2_ujian_ini_ada_mengandungi_jenis_soalan_aneka_pilihan_n3_kerjakan_dengan_cepat_dan_Berhati_hati_n4_harus_menyiapkan_semua_soalan_sebelum_masa_habis">1. JAWAB SEMUA SOALAN\n2. UJIAN INI ADA MENGANDUNGI JENIS SOALAN ANEKA PILIHAN.\n3. KERJAKAN DENGAN CEPAT DAN BERHATI - HATI\n4. HARUS MENYIAPKAN SEMUA SOALAN SEBELUM MASA HABIS</string>
    <string name="_3_minuteS">3 Minutes</string>
    <string name="_10_questionS">10 Questions</string>
    <string name="_01_00_">01:00</string>
    <string name="question_1_of_5_">Question 1 of 5</string>
    <string name="question_">Question?</string>
    <string name="option_1_">Option 1</string>
    <string name="option_2_">Option 2</string>
    <string name="option_3_">Option 3</string>
    <string name="option_4_">Option 4</string>
    <string name="submit_">Submit</string>
    <string name="score_0_">Score: 0</string>
    <string name="peribahasa">Peribahasa</string>
    <string name="maksud_peribahasa">Maksud Peribahasa</string>
    <string name="peribahasa_merupakan_susunan_kata_yang_mempunyai_maksud_yang_tersirat_ia_digunakan_untuk_menyampaikan_teguran_nasihat_ingatan_atau_sindiran_dalam_bentuk_kiasan_yang_telah_diwarisi_sejak_zaman_dahulu">Peribahasa merupakan susunan kata yang mempunyai maksud yang tersirat. Ia digunakan untuk menyampaikan teguran, nasihat, ingatan atau sindiran dalam bentuk kiasan yang telah diwarisi sejak zaman dahulu.</string>
    <string name="simpulan_bahasa">Simpulan Bahasa</string>
    <string name="Simpulan_bahasa">Simpulan Bahasa</string>
    <string name="maksud">Maksud</string>
    <string name="ajak_ajak_ayam">Ajak-ajak ayam</string>
    <string name="tidak_bersungguh_sungguh_semasa_mengajak_seseorang">Tidak bersungguh-sungguh semasa mengajak seseorang.</string>
    <string name="anak_emas">Anak emas</string>
    <string name="mizan_berpakaian_kemas_untuk_sesi_temu_duga_nmurid_itu_ditegur_gurunya_kerana_dia_berkelakuan_kasar">Mizan berpakaian kemas untuk sesi temu duga.\nMurid itu ditegur gurunya kerana dia berkelakuan kasar.</string>
    <string name="buruk_kemas_kasar_lemah_miskin_sibuk">Buruk, kemas, kasar, lemah, miskin, sibuk</string>
    <string name="keadaan">Keadaan</string>
    <string name="lelaki_berbaju_hitam_itu_bapa_nurin_nmanchester_city_berjersi_biru_pada_perlawanan_ini">Lelaki berbaju hitam itu bapa Nurin.\nManchester City berjersi biru pada perlawanan ini.</string>
    <string name="merah_kuning_biru_hitam_hijau_kelabu">Merah, kuning, biru, hitam, hijau, kelabu</string>
    <string name="warna">Warna</string>
    <string name="calvin_nyaris_dilanggar_kereta_npasar_malam_itu_dekat_dengan_rumah_saya">Calvin nyaris dilanggar kereta.\nPasar malam itu dekat dengan rumah saya.</string>
    <string name="jauh_dekat_hampir_nyaris_rapat">Jauh, dekat, hampir, nyaris, rapat</string>
    <string name="jarak">Jarak</string>
    <string name="kata_adjektif">Kata Adjektif</string>
    <string name="jenis">Jenis</string>
    <string name="contoh_kata_adjektif">Contoh Kata Adjektif</string>
    <string name="contoh_ayat_">Contoh Ayat</string>
    <string name="pancaindera">Pancaindera</string>
    <string name="pahit_manis_sedap_cantik_tampan_busuk_wangi_licin_kasar">Pahit, manis, sedap, cantik, tampan, busuk, wangi, licin, kasar</string>
    <string name="izzat_seorang_lelaki_yang_tampan_ngula_gula_ini_rasa_sangat_manis">Izzat seorang lelaki yang tampan.\nGula-gula ini rasa sangat manis.</string>
    <string name="perasaan">Perasaan</string>
    <string name="gembira_suka_rindu_berani_ragu_benci_kasih">Gembira, suka, rindu, berani, ragu, benci, kasih</string>
    <string name="ramli_rindu_akan_ibunya_di_kampung_nmuthu_seorang_budak_yang_berani">Ramli rindu akan ibunya di kampung.\nMuthu seorang budak yang berani.</string>
    <string name="bentuk">Bentuk</string>
    <string name="bujur_bengkok_kempis_lurus_bulat_leper">Bujur, bengkok, kempis, lurus, bulat, leper</string>
    <string name="bola_sepak_itu_berbentuk_bulat_ntiang_itu_bengkok_dilanggar_kereta">Bola sepak itu berbentuk bulat.\nTiang itu bengkok dilanggar kereta.</string>
    <string name="ukuran">Ukuran</string>
    <string name="panjang_pendek_kecil_besar_tinggi_rendah_tebal_nipis">Panjang, pendek, kecil, besar, tinggi, rendah, tebal, nipis</string>
    <string name="menara_klcc_sangat_tinggi_nkamus_itu_sangat_tebal">Menara KLCC sangat tinggi.\nKamus itu sangat tebal.</string>
    <string name="tabiat">Tabiat</string>
    <string name="baik_jahat_cerdik_pandai_lemah_sihat_gopoh">Baik, jahat, cerdik, pandai, lemah, sihat, gopoh</string>
    <string name="irfan_seorang_pelajar_yang_sangat_pandai_ntubuh_atlet_itu_sihat_dan_tegap">Irfan seorang pelajar yang sangat pandai.\nTubuh atlet itu sihat dan tegap.</string>
    <string name="cara">Cara</string>
    <string name="cepat_deras_laju_perlahan_jelas_lincah">Cepat, deras, laju, perlahan, jelas, lincah</string>
    <string name="kereta_itu_dipandu_dengan_sangat_laju_nmessi_merupakan_pemain_bola_yang_lincah">Kereta itu dipandu dengan sangat laju.\nMessi merupakan pemain bola yang lincah.</string>
    <string name="waktu">Waktu</string>
    <string name="lama_lewat_lampau_suntuk_awal_segera">Lama, lewat, lampau, suntuk, awal, segera</string>
    <string name="kamal_lewat_ke_tempat_kerjanya_nperjalanan_ke_kelantan_mengabil_masa_yang_amat_lama">Kamal lewat ke tempat kerjanya.\nPerjalanan ke Kelantan mengabil masa yang amat lama.</string>
</resources>