<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:text="@string/hello_student"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:hint="@string/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_password">

        </CheckBox>


    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/btn_Login"
        android:layout_width="372dp"
        android:layout_marginBottom="80dp"
        android:layout_height="wrap_content"
        android:text="@string/login">
    </Button>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:text="@string/Register">
    </Button>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="Dont' Have An Account?" />

</LinearLayout>
